@@ -24,6 +24,7 @@ my $builder = Module::Build->new(
         'MRO::Compat'          => 0,
         'Module::Load'         => 0,
         'Params::Validate'     => 0,
+        'Scalar::Does'         => 0,
 	'Try::Tiny'            => 0,
     },
     build_requires => {
